bpo-46008: Return void from _PyEval_InitState(). (gh-29970)

This falls into the category of keep-allocation-and-initialization separate. It also allows us to use _PyEval_InitState() safely in functions that return void.

https://bugs.python.org/issue46008